# jarvis-build

./: .env.example  .gitleaksignore  AGENTS.md  CONSTITUTION.md  JARVIS_100_PERCENT_COMPLETION_EXECUTION_PLAN.md  JARVIS_API_CHANNEL_RUNBOOK.md  JARVIS_APP_RISK_APPROVAL_MATRIX.md  JARVIS_AUTONOMOUS_META_EXECUTION_PROGRESS_TRACKER.md  JARVIS_BUILD_MAMMOTH_CONSOLIDATED_SPEC.md  JARVIS_BUILD_RECONSTRUCTION_AND_CONSOLIDATION_DIRECTIVE.md  JARVIS_DEPLOYMENT_TARGET_MATRIX.md  JARVIS_GITHUB_COMMIT_DEPLOY_HANDOFF.md  JARVIS_HYBRID_MODEL_ROUTER_PLAN.md  JARVIS_MASTER_SPEC.md  JARVIS_MODULE_REGISTRY.md  JARVIS_MODULE_REGISTRY_OMNI_META_AGENT_ADDENDUM.md  JARVIS_MODULE_REGISTRY_V21.md  JARVIS_OBSERVABILITY_AND_SMOKE_TEST_MATRIX.md  JARVIS_OTHER_AGENT_UNIFICATION_WORKFLOW.md  JARVIS_PROJECT_UNIVERSE_MODULE_CONSOLIDATION_REGISTER.md  JARVIS_RAF213G_PROJECT_CONSTITUTION.md  JARVIS_REPOSITORY_FEDERATION_COST_AGENT_FACTORY.md  JARVIS_SCHEDULE_RUNBOOK.md  JARVIS_SKILL_DEDUPE_MAP.md  JARVIS_SKILL_MODULE_OMNI_UPGRADE_REGISTER.md  JARVIS_SOVEREIGN_OMNI_META_ROLE_COUNCIL_EXECUTION_PROTOCOL.md  JARVIS_SOVEREIGN_REQUEST_CAPTURE_BUILD_COMPILER.md  JARVIS_V21_PR_BODY.md  JARVIS_V21_PR_CREATION_HANDOFF.md  JARVIS_V21_SOURCE_FILE_VERIFICATION_MATRIX.md  PROJECT_CONSTITUTION.md  PROJECT_CONTINUITY.md  README.md  pyproject.toml
continuity/: RESUME_PROMPT.md
decisions/: JARVIS_V21_DECISION_RECORDS.md
docs/: HEALTH_SPOOKY2_PSYCHOLOGY_RECONSTRUCTION_V14.md  JARVIS_LIVE_BUILD_TRACKER.md  JARVIS_V17_COMPLETION_TRANCHE_2026_07_22.md  business-runtime-v1-runbook.md  chatgpt-project-instructions.txt  (+28 more)
(+500 files in other folders)
